# aoc.cpp

./: .gitignore  CMakeLists.txt  README.md  deps.cmake  gen.sh  out.txt  run.sh
bonus/: 2024-02.sql
exe/: CMakeLists.txt  day.cmake  main.cpp
exe/2019-01/: main.cpp
exe/2019-02/: main.cpp
exe/2019-05/: main.cpp
exe/2024-01/: main.cpp
exe/2024-02/: main.cpp
exe/2024-03/: main.cpp
exe/2024-04/: CMakeLists.txt  main.cpp
exe/2024-05/: main.cpp
exe/2024-06/: main.cpp
exe/2024-07/: main.cpp
exe/2024-08/: main.cpp
exe/2024-09/: main.cpp
exe/2024-10/: main.cpp
exe/2024-11/: main.cpp
exe/2024-12/: main.cpp
exe/2024-13/: main.cpp
exe/2024-14/: main.cpp
exe/2024-15/: main.cpp
exe/2024-16/: main.cpp
exe/2024-17/: main.cpp
exe/2024-18/: main.cpp
exe/2024-19/: main.cpp
include/: coord.h  grid.h  intcode.h  lib.h  read.h  split.h
lib/: CMakeLists.txt  coord.cpp  lib.cpp  read.cpp  split.cpp
